# express-vs-rocket

./: README.md
express/: package-lock.json  package.json  tsconfig.json
express/src/: index.ts
rust-rocket/: Cargo.toml  Rocket.toml
rust-rocket/src/: main.rs
