[package]
name = "rust-rocket"
version = "0.1.0"
authors = ["dan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.116"
serde_json = "1.0"
serde_derive = "1.0"
num-bigint = "0.3"
num-traits = "0.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]